--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,6 @@ $fontFamily: 'Karla', sans-serif;
 
 
 //minxin
-
 @mixin titleDescription {
     padding:0 30px;
     max-width: 90%;
@@ -56,7 +55,6 @@ $fontFamily: 'Karla', sans-serif;
 }
 
 // typography setting 
-
 h1 {
     font-size: 35px;
     font-weight: 800;
@@ -90,7 +88,7 @@ h1 {
     color: $altColor;
 }
 
- // end of typography setting 
+
 
 *, *::before, *::after {
     box-sizing: border-box;
@@ -114,7 +112,7 @@ body {
 
 
 // navigation sticky
-.nav {
+.navigation {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
@@ -122,6 +120,7 @@ body {
     width: 100vw;
     position: fixed;
     z-index: 99999;
+    background-color: $bgColor;
     
     &__logo {
         color: $bgColorSecond;
@@ -134,6 +133,7 @@ body {
         margin: 0 3px;
     }
 
+    /*
     &__link {
         text-transform:uppercase;
         font-size: 14px;
@@ -150,7 +150,9 @@ body {
             }
         }
     }
+    */
 }
+
 
 .start {
     min-height: 100vh;
@@ -331,6 +333,7 @@ body {
     color: $bgColor;
     display: flex;
     flex-flow: column wrap;
+    align-content: center;
 }
 
 .box {
@@ -341,6 +344,7 @@ body {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
+    
 
     &__header {
         font-size: 35px;
@@ -409,6 +413,8 @@ body {
 
     &__subtitle-active {
         color: $secondColor;
+        font-weight: 800;
+        text-transform: uppercase;
     }
 
     &__description-active {
@@ -439,17 +445,11 @@ body {
 .footer {
     background: $bgColor;
     background: linear-gradient(332deg, rgba(227,238,248,1) 56%, rgba(255,255,255,1) 100%);
-    padding: 40px 0;
+    padding: 40px 10%;
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: 1fr;
     grid-gap: 15px;
-    margin: 0 auto;
-
-    &__box {
-      width: 80%;
-      margin: 0 auto;
-    }
 }
 
 .about {
@@ -475,13 +475,14 @@ body {
 
 .navfooter {
     grid-area: 2 / 1 / 3 / 2;
-    margin: 0 auto;
     padding: 0;
+    display: flex;
+    flex-flow: column wrap;
 
     &__header {
         font-weight: 800;
         color: $primaryColor;
-        font-size: 30px;
+        font-size: 24px;
         text-align: left;
     }
     
@@ -530,7 +531,14 @@ body {
     grid-area: 3 / 1 / 4 / 2;
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+  
+    &__header {
+        font-weight: 800;
+        color: $primaryColor;
+        font-size: 24px;
+        text-align: left;
+        display: none;
+    }
 
     &__figure {
         display:flex;
@@ -556,4 +564,103 @@ body {
 }
 
 //Breakpoints
-@import '720px'
+@media (min-width:720px) {
+    
+    .container__item {
+        padding-right: 15%;
+        padding-left: 15%;
+    }
+
+    .simple {
+
+        &__figure{
+            height: 680px;
+        }
+
+        &__phone {
+            font-size: 400px;
+        }
+    }
+    
+    //footer 
+    .footer {
+        grid-template-rows: auto;
+        grid-template-columns: 50% 25% 25%;
+        padding: 5% 5%;
+        align-content: center;
+
+    }
+
+        //first footer box
+    .about {
+        grid-area: 1 / 1 / 2 / 2;
+
+        &__description {
+            margin: 20px 10% 20px 0;
+        }
+    }
+
+        //second footer box
+    .navfooter {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+        // third footer box
+    .social {
+        grid-area: 1 / 3 / 2 / 4;
+        display: grid; //before is it flexbox
+        grid-template-rows: auto;
+        grid-template-columns: auto;
+
+        &__header {
+            display: block;
+            grid-area: 1 / 1 / 2 / 3;
+        }
+
+        &__figure {
+            margin: 0;
+        }
+
+        &__icon {
+            font-size: 29px;
+        }
+
+        &__fb {
+           grid-area: 2 / 1 / 3 / 2;
+        }
+
+        &__tw {
+            grid-area: 2 / 2 / 3 / 3;
+        }
+
+        &__insta {
+            grid-area: 3 / 1 / 4 / 2;
+        }
+
+        &__mail {
+            grid-area: 3 / 2 / 4 / 3;
+        }
+    }
+
+}
+
+
+
+@media (min-width: 520px) {
+    
+    .simple {
+
+        &__figure{
+            height: 480px;
+        }
+
+        &__phone {
+            font-size: 300px;
+        }
+    }
+
+    .box {
+        padding: 5% 10%;
+        width: 70%;
+    }
+}
